--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "gulp-sass": "^3.1.0",
     "gulp-uglifyjs": "^0.6.2",
     "imagemin-pngquant": "^5.0.1"
+  },
+  "dependencies": {
+    "include-media": "^1.4.9"
   }
 }
